package com.directi.training.lsp.exercise;

public interface DuckI {
    public void quack();

    public void swim();
}
