package com.directi.training.lsp.exercise;

public interface ElectronicDuckI extends DuckI {
    public void turnOn();

    public void turnOff();
}
