@startuml
interface DuckI
DuckI :   +void quack();
DuckI  :  +void swim();
interface ElectronicDuckI
ElectronicDuckI : +void turnOn();
ElectronicDuckI : +void turnOff();
Duck ..|>  DuckI
ElectronicDuckI --|>DuckI
ElectronicDuck : -_on
ElectronicDuck ..|> ElectronicDuckI
DuckI<--Pool : "swims">
Pool : void run()
Pool : void swim(..DuckI)
Pool : void quack(..DuckI)
Pool : DuckI ElectronicDuck
Pool : DuckI Duck
@enduml
